# purescript-webgl-generator

./: .gitignore  WebGL.idl  WebGL_enum.idl  purescript-webgl-generator.cabal
src/: Main.hs
src/IDL/: AST.hs  Parser.hs  Printer.hs
