name: purescript-webgl-generator
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-2
license-file: LICENSE
maintainer: jnf@arcor.de
category: Development
author: Jürgen (Jutaro) Nicklisch-Franken
data-dir: ""

executable purescript-webgl-generator
    build-depends: base         >= 4.9.0 && < 4.10,
                    parsec       >= 3.1.11 && < 3.2,
                    transformers >= 0.5.2 && < 0.6,
                    pretty       >= 1.1.3 && < 1.2
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: IDL.AST IDL.Parser IDL.Printer
